# GitRel

./: Makefile  pyproject.toml
src/gitrel/: __init__.py
stubs/: inquirer.pyi  semantic_version.pyi
